<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WhereTo</string>


    <!-- Strings for Dashboard -->

    <string name="logo_name">Where To?</string>

    <!-- Categories -->
    <string name="hotels">Hotels</string>
    <string name="flights">Flights</string>
    <string name="trains">Trains</string>
    <string name="buses">Buses</string>

    <!-- Titles and Descriptions -->
    <string name="featured_locations">Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">View All</string>

    <!-- Titles -->
    <string name="destination_slide_title">Destinations</string>
    <string name="touristSpot_slide_title">Tourist Spots</string>
    <string name="travel_slide_title">Travel</string>
    <string name="easy_slide_title">Easy to Use</string>
    <string name="hotel_slide_title">Hotels</string>

    <!-- Description -->
    <string name="destination_slide_desc">Here at Where To you get to select the best destinations that suit you the best for your type of atmosphere.</string>
    <string name="touristSpot_slide_desc">Here at Where To you get a large number og tourist spots that are quite famous from a very long period of time .</string>
    <string name="travel_slide_desc">Here at Where To you get the best choices to travel across in multiple metro cities.</string>
    <string name="easy_slide_desc">Here at Where To you get an ease of use to find the best touring locations without a lot of hassle.</string>
    <string name="hotel_slide_desc">We have the best reviewed hotels from all around the best cities that are famous for itself and have been serving countless people</string>

    <!-- Buttons -->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="lets_get_started">Lets Get Started</string>


    <string name="bold" tools:ignore="ReferenceType">@font/rubikbold</string>
    <string name="regular" tools:ignore="ReferenceType">@font/rubikregular</string>
    <string name="light" tools:ignore="ReferenceType">@font/rubiklight</string>

</resources>