<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">


    <LinearLayout
        android:id="@+id/contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">



            <ImageView
                android:id="@+id/userProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="1dp"
                android:src="@drawable/userprof" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="casual"
                        android:text="@string/logo_name"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout

                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_1"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:id="@+id/Hotel"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_hotel" />



                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Hotel"
                            android:textAlignment="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_1"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:id="@+id/covidGuide"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_covidguide" />



                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Guideline"
                            android:textAlignment="center"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_1"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:id="@+id/Weather"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_weather" />



                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Weather"
                            android:textAlignment="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_1"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:id="@+id/LiveCovid"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_covid" />



                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Live Covid"
                            android:textAlignment="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>

                </LinearLayout>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/banner_background_light">

                    <LinearLayout
                        android:id="@+id/featured_background"
                        android:layout_width="170dp"
                        android:layout_height="280dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/banner_background"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:layout_marginTop="25dp"
                            android:text="@string/featured_locations"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="25dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:text="@string/featured_locations_description"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="290dp"
                        android:layout_toRightOf="@id/featured_background"
                        android:background="@color/home_background" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/most_viewed_locations"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/viewAll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="@string/view_all"
                            android:textColor="@color/black" />


                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mostViewedRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="170dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/categories"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />




                    </RelativeLayout>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/northIndia"
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        app:cardElevation="15dp"
                        android:background="@color/white"
                        app:cardCornerRadius="50dp"
                        android:layout_marginTop="25dp"
                        android:layout_gravity="center">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="250dp"
                                android:src="@drawable/northindia"
                                android:scaleType="centerCrop"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="North India"
                                android:textAlignment="center"
                                android:layout_marginTop="5dp"
                                android:textSize="30sp"
                                android:textColor="#1E1E1E"
                                android:fontFamily="sans-serif-black"/>



                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/southIndia"
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        app:cardElevation="15dp"
                        android:background="@color/white"
                        app:cardCornerRadius="50dp"
                        android:layout_marginTop="25dp"
                        android:layout_gravity="center">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="250dp"
                                android:src="@drawable/southindia"
                                android:scaleType="centerCrop"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="South India"
                                android:textAlignment="center"
                                android:layout_marginTop="5dp"
                                android:textSize="30sp"
                                android:textColor="#1E1E1E"
                                android:fontFamily="sans-serif-black"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/eastIndia"
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        app:cardElevation="15dp"
                        android:background="@color/white"
                        app:cardCornerRadius="50dp"
                        android:layout_marginTop="25dp"
                        android:layout_gravity="center">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="250dp"
                                android:src="@drawable/eastindia"
                                android:scaleType="centerCrop"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="East India"
                                android:textAlignment="center"
                                android:layout_marginTop="5dp"
                                android:textSize="30sp"
                                android:textColor="#1E1E1E"
                                android:fontFamily="sans-serif-black"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/westIndia"
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        app:cardElevation="15dp"
                        android:background="@color/white"
                        app:cardCornerRadius="50dp"
                        android:layout_marginTop="25dp"
                        android:layout_gravity="center">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="250dp"
                                android:src="@drawable/westindia"
                                android:scaleType="centerCrop"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="West India"
                                android:textAlignment="center"
                                android:layout_marginTop="5dp"
                                android:textSize="30sp"
                                android:textColor="#1E1E1E"
                                android:fontFamily="sans-serif-black"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>



                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
